# embind_external_library

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel
.devcontainer/: Dockerfile  devcontainer.json
module/: BUILD.bazel  hello.cc  hello.h  hello_external.cc  hello_js.cc  hello_test.cc
