load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

EMCC_SETTINGS = [
    "-lembind",
    "-s MALLOC=emmalloc",
    "-s WASM=1",
    "-s MEMORY64=1",
    "-s WASM_BIGINT=1",
    "-s ALLOW_MEMORY_GROWTH=1",
    "-g3",
    "-s FILESYSTEM=0",
    "-s MODULARIZE=1",
    "-s EXPORT_NAME=Module",
    "-s EXPORT_ES6=1",
    "-s SINGLE_FILE=1",
]

cc_library(
    name = "hello",
    srcs = ["hello.cc"],
    hdrs = ["hello.h"],
)

cc_binary(
    name = "hello_test",
    srcs = ["hello_test.cc"],
    deps = [":hello"],
)

cc_binary(
    name = "hello_embind",
    srcs = ["hello_js.cc"],
    deps = [":hello"],
    linkopts = EMCC_SETTINGS,
    tags = ["manual"],
)
wasm_cc_binary(
    name = "hello_wasm",
    cc_target = ":hello_embind",
)
